--- a/public/index.html
+++ b/public/index.html
@@ -13,27 +13,23 @@
     <div class="container">
         <div class="row mt-4">
             <div class="col-md-12">
-                <h4><strong>Realtime comment system using NodeJs, Express, Mongo DB, Socket.io and vanila
-                        Javascript</strong></h4>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Numquam enim, vitae cum error facere facilis
-                    aperiam delectus ducimus necessitatibus, at, rem explicabo nulla. Maxime tempore sunt ipsa fuga
-                    velit minus culpa laboriosam. Laborum architecto, natus reprehenderit consequatur maiores facilis,
-                    sunt laboriosam explicabo sit officiis accusamus sint eligendi debitis corrupti ad eaque nihil ullam
-                    omnis officia id dolorum? Alias, tempore possimus.</p>
+                <h4><strong>MIT Quora</strong></h4>
+               
             </div>
         </div>
         <div class="row mb-4">
-            <div class="col-md-12">
-                <h4 class="border-bottom pb-2">Comments</h4>
-            </div>
+            
             <div class="col-md-12">
                 <div class="form-group">
-                    <label for="">Write a comment</label>
+                    <label for="">Type your question</label>
                     <textarea id="textarea" rows="3" class="form-control"></textarea>
                 </div>
             </div>
             <div class="col-md-12">
-                <button id="submitBtn" class="btn btn-primary float-right">Post comment</button>
+                <button id="submitBtn" class="btn btn-primary float-right">Post question</button>
+            </div>
+            <div class="col-md-12">
+                <h4 class="border-bottom pb-2">Chats</h4>
             </div>
         </div>
         <div class="row">
