--- a/public/index.html
+++ b/public/index.html
@@ -36,6 +36,15 @@
             <div class="col-md-12">
                 <div class="typing text-success"></div>
                 <ul class="comment__box">
+                    <div style="height:300px ;background-color: white; width:100% ; border:2px solid red">
+                      <div>
+                        <h2>Kunal</h2>
+                        <p>Anyone up for sex</p>
+
+                        <h2>Random girl</h2>
+                        <p>Ya sure, ur place or mine</p>
+                      </div>
+                    </div>
                     <!-- <li class="comment">
                         <div class="card border-light mb-3">
                             <div class="card-body">
@@ -66,6 +75,14 @@
                     </li> -->
                 </ul>
             </div>
+        </div>
+        <div class="col-md-12">
+            <h4><strong>Note</strong></h4>
+            <p>Chatting web sites and apps have actually been preferred recently, particularly amongst all throughout the world.
+                Mit quora is a great way to meet new friends. Our goal is to provide our users with chat that is simple to use and rich in features.When you use mit quora, you get the access to interact and collaborate with a larger crowd having similar interests. If you prefer, you can add your interests.
+                
+                To help you stay safe, the security is taken care by authentication of users. See our Terms of Service and Community Guidelines for more info about the do’s and don’ts in using MIT quora.<br>USERS ARE SOLELY RESPONSIBLE FOR THEIR BEHAVIOR WHILE USING MIT QUORA.</p>
+           
         </div>
     </div>
     <script src="/socket.io/socket.io.js"></script>
